task3/deploy-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-old
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 10
  selector:
    matchLabels:
      app: web-old
  template:
    metadata:
      labels:
        app: web-old
    spec:
      volumes:
      - name: html-vol
        configMap:
          name: old-html
      containers:
      - name: web
        image: nginx:latest
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        volumeMounts:
        - name: html-vol
          mountPath: /usr/share/nginx/html
