task3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-old
spec:
  selector:
    app: web-old
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http

---


apiVersion: v1
kind: Service
metadata:
  name: nginx-new
spec:
  selector:
    app: web-new
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
